--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,9 @@
 #root {
-  padding: 2rem;
-  text-align: center;
+  padding: 0;
+  text-align: left;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .logo {
